Updates to include cosine distance threshold for similarity search, additional integration tests, and some bug fixes found in exploratory testing
